--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -37,6 +37,18 @@ $border-color: #ebeef5;
   font-size: 12px;
   height: 32px;
   border-radius: 5px;
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  &[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
+.ant-input-group-addon{
+  font-size: 12px;
+  color:#666;
+  border-radius: 0px 5px 5px 0px;
 }
 .ant-input-affix-wrapper {
   font-size: 12px;
