--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -41,13 +41,13 @@ $border-color: #ebeef5;
   &::-webkit-inner-spin-button {
     -webkit-appearance: none;
   }
-  &[type="number"] {
+  &[type='number'] {
     -moz-appearance: textfield;
   }
 }
-.ant-input-group-addon{
+.ant-input-group-addon {
   font-size: 12px;
-  color:#666;
+  color: #666;
   border-radius: 0px 5px 5px 0px;
 }
 .ant-input-affix-wrapper {
@@ -143,4 +143,26 @@ $border-color: #ebeef5;
 //单选框样式
 .ant-radio-wrapper {
   font-size: 13px;
+}
+
+//单选框按钮样式
+.ant-radio-group.ant-radio-group-solid {
+  border-radius: 4px;
+  font-size: 12px;
+  overflow: hidden;
+  .ant-radio-button-wrapper {
+    border: 0;
+    width: 60px;
+    text-align:center;
+    &::before,
+    &::after {
+      background-color: #e3e2e5;
+    }
+    &.ant-radio-button-wrapper-checked {
+      color: #2589ff;
+      border-color: #d0e5ff;
+      background-color: #d0e5ff;
+      font-weight: bold;
+    }
+  }
 }
