--- a/src/views/store/components/decorate-form/styles/index.scss
+++ b/src/views/store/components/decorate-form/styles/index.scss
@@ -1,6 +1,11 @@
 .decorate-form-tabs {
+  flex: 1;
+  height: 0;
+  display: flex;
+  flex-direction: column;
   ::v-deep(.ant-tabs-bar) {
     margin-bottom: 0px;
+    flex-shrink: 0;
     .ant-tabs-nav {
       width: 100%;
       > div:nth-of-type(1) {
@@ -12,6 +17,12 @@
         }
       }
     }
+  }
+  ::v-deep(.ant-tabs-content) {
+    flex: 1;
+    height: 0;
+    overflow: hidden;
+    overflow-y: auto;
   }
 }
 
@@ -41,33 +52,36 @@
   }
 }
 
-.form-title{
+.form-title {
   height: 50px;
   padding-left: 10px;
   font-size: 14px;
   font-weight: bold;
   line-height: 50px;
+  flex-shrink: 0;
 }
 
 .tab-style {
   margin: 10px auto;
   margin-right: 10px;
   background-color: #fff;
-  ::v-deep(.ant-radio-group.ant-radio-group-solid){
+  width: 100%;
+  flex-shrink: 0;
+  ::v-deep(.ant-radio-group.ant-radio-group-solid) {
     width: 100%;
     display: flex;
     .style-item {
       flex: 1;
       width: 0;
       height: 38px;
-      border:1px solid #e3e2e5;
+      border: 1px solid #e3e2e5;
       @extend .d-flex;
       justify-content: center;
-      img{
+      img {
         width: 28px;
       }
     }
-  } 
+  }
 }
 
 .color-item {
@@ -75,4 +89,10 @@
   > .ant-btn {
     width: 60px;
   }
+}
+
+.decorate-form-public-warpper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
